Adding error handlig + a new endpoint
